--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   <script src="angular/angular.min.js"></script>
